Retrofit for JDK 1.8